tests/invalid/missing_parameter_semantic.vert.hlsl
void main(out float4 out_pos)
{
    out_pos = float4(0.0, 0.0, 0.0, 1.0);
}
